feat: persist job dashboards
